# ConsoleTableText

./: .gitignore  README.md  main.py  pyproject.toml
ConsoleTableText/: __init__.py
src/ConsoleTableText/: example.py
src/ConsoleTableText_BlackDog/: __init__.py  example.py
